--- a/index.html
+++ b/index.html
@@ -17,7 +17,9 @@
     <link rel="icon" type="image/png" sizes="96x96" href="icons/favicon-96x96.png">
     <link rel="icon" type="image/png" sizes="32x32" href="icons/favicon-32x32.png">
     <link rel="icon" type="image/png" sizes="16x16" href="icons/favicon-16x16.png"> -->
-  <link rel="icon" type="image/ico" href="favicon.ico">
+  <!-- <link rel="icon" type="image/ico" href="favicon.ico"> -->
+  <link rel="icon" type="image/ico" href="public/list.png">
+
 </head>
 
 <body>
